--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
     "name": "formData",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Form validation based on data attributes",
-    "main": "index.js",
-    "directories": {
-        "example": "examples"
-    },
-    "scripts": {
-        "test": ""
-    },
     "keywords": [
         "form validation"
     ],
     "author": "Labmarkup.com",
     "license": "MIT",
     "devDependencies": {
-        "grunt": "~0.4.5",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-contrib-concat": "~0.4.0",
-        "grunt-contrib-uglify": "~0.5.0"
+        "gulp": "^3.8.10",
+        "gulp-concat": "^2.4.2",
+        "gulp-header": "^1.2.2",
+        "gulp-notify": "^2.1.0",
+        "gulp-rename": "^1.2.0",
+        "gulp-uglify": "^1.0.2"
     }
 }
